--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ mockall_double = "0.3"
 axum = { version = "0.7.5", features = ["macros", "query"] }
 axum-server = { version = "0.6", features = ["tls-rustls"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
+tikv-jemallocator = "0.5.4"
 
 [dev-dependencies]
 mockall = "0.12"
