--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ opentelemetry = { version = "0.22.0", default-features = false, features = [
 ] }
 opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
 pprof = { version = "0.13", features = ["prost-codec"] }
-policy-evaluator = { git = "https://github.com/fabriziosestito/policy-evaluator", branch = "feat/sqlite-cache" }
+policy-evaluator = { git = "https://github.com/fabriziosestito/policy-evaluator", rev = "828d36bde67691077d5552f0afe62f13f52fda9c" }
 rustls-pki-types = { version = "1", features = ["alloc"] }
 rayon = "1.10"
 regex = "1.10"
