--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ tikv-jemallocator = { version = "0.5.4", features = [
 ] }
 jemalloc_pprof = "0.1.0"
 tikv-jemalloc-ctl = "0.5.4"
-rhai = { version = "1.18.0", features = ["sync"] }
+rhai = { version = "1.19.0" }
 
 [dev-dependencies]
 mockall = "0.12"
