--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,9 @@ http-body-util = "0.1.1"
 testcontainers = { version = "0.23", features = ["watchdog"] }
 backon = { version = "1.3", features = ["tokio-sleep"] }
 rcgen = { version = "0.13", features = ["crypto"] }
+ktest = { git = "https://github.com/fabriziosestito/ktest" }
+testcontainers-modules = { version = "0.11.5", features = ["kwok"] }
+
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 openssl = "0.10"
