--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ opentelemetry = { version = "0.27.0", default-features = false, features = [
 ] }
 opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
 pprof = { version = "0.14", features = ["prost-codec"] }
-policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.19.9" }
+policy-evaluator = { path = "../policy-evaluator" }
 rustls = { version = "0.23", default-features = false, features = [
   "ring",
   "logging",
@@ -77,9 +77,11 @@ tikv-jemalloc-ctl = "0.6.0"
 rhai = { version = "1.19.0", features = ["sync"] }
 tonic = { version = "0.12.3" }
 
-# Controller runtime
+
+# POC dependencies
 schemars = { version = "0.8", features = ["chrono"] }
 kube = { version = "0.98", features = ["runtime", "client", "derive"] }
+
 
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = "0.11"
